--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.16.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-popover": "^1.1.15",
@@ -32,6 +33,7 @@
     "cmdk": "^1.1.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "next-auth": "^5.0.0-beta.29",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
