--- a/src-tauri/gen/apple/ai-tarot-chat.xcodeproj/xcshareddata/xcschemes/ai-tarot-chat_iOS.xcscheme
+++ b/src-tauri/gen/apple/ai-tarot-chat.xcodeproj/xcshareddata/xcschemes/ai-tarot-chat_iOS.xcscheme
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1430"
-   version = "1.7">
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES"
-      runPostActionsOnFailure = "NO">
+      buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -16,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "A356AF575D9BF88B60D06E71"
-               BuildableName = "ai-tarot-chat_iOS.app"
+               BuildableName = "ai-tarot-chat.app"
                BlueprintName = "ai-tarot-chat_iOS"
                ReferencedContainer = "container:ai-tarot-chat.xcodeproj">
             </BuildableReference>
@@ -27,21 +26,16 @@
       buildConfiguration = "debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "NO"
-      onlyGenerateCoverageForSpecifiedTargets = "NO">
+      shouldUseLaunchSchemeArgsEnv = "NO">
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "A356AF575D9BF88B60D06E71"
-            BuildableName = "ai-tarot-chat_iOS.app"
+            BuildableName = "ai-tarot-chat.app"
             BlueprintName = "ai-tarot-chat_iOS"
             ReferencedContainer = "container:ai-tarot-chat.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
-      <Testables>
-      </Testables>
-      <CommandLineArguments>
-      </CommandLineArguments>
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "RUST_BACKTRACE"
@@ -54,6 +48,8 @@
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
+      <Testables>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "debug"
@@ -70,13 +66,11 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "A356AF575D9BF88B60D06E71"
-            BuildableName = "ai-tarot-chat_iOS.app"
+            BuildableName = "ai-tarot-chat.app"
             BlueprintName = "ai-tarot-chat_iOS"
             ReferencedContainer = "container:ai-tarot-chat.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <CommandLineArguments>
-      </CommandLineArguments>
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "RUST_BACKTRACE"
@@ -101,13 +95,11 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "A356AF575D9BF88B60D06E71"
-            BuildableName = "ai-tarot-chat_iOS.app"
+            BuildableName = "ai-tarot-chat.app"
             BlueprintName = "ai-tarot-chat_iOS"
             ReferencedContainer = "container:ai-tarot-chat.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <CommandLineArguments>
-      </CommandLineArguments>
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "RUST_BACKTRACE"
