--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/react-query": "^5.90.2",
     "@tauri-apps/api": "^2.8.0",
-    "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-sql": "^2.3.0",
+    "@tauri-apps/plugin-store": "^2.4.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "tauri-plugin-web-auth-api": "^1.0.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
