--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,11 +19,13 @@ tauri-build = { version = "2", features = [] }
 
 [dependencies]
 tauri = { version = "2", features = [] }
-tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["full"] }
 uuid = { version = "1", features = ["v4"] }
+dotenv = "0.15"
+tauri-plugin-store = "2"
+tauri-plugin-web-auth = "1.0.0"
 
 [features]
 custom-protocol = ["tauri/custom-protocol"]
