OAuth が通るように修正

--- a/src-tauri/gen/apple/ai-tarot-chat_iOS/Info.plist
+++ b/src-tauri/gen/apple/ai-tarot-chat_iOS/Info.plist
@@ -40,5 +40,33 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsLocalNetworking</key>
+		<true/>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>localhost</key>
+			<dict>
+				<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSTemporaryExceptionMinimumTLSVersion</key>
+				<string>TLSv1.1</string>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
+		</dict>
+	</dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>Tarot AI Auth</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>aitarotchat</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
