画面の大幅修正とプラン変更の実装

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tauri-apps/plugin-os": "^2.3.1",
     "@tauri-apps/plugin-sql": "^2.3.0",
     "@tauri-apps/plugin-store": "^2.4.0",
+    "jose": "^6.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.13",
