--- a/web/package.json
+++ b/web/package.json
@@ -32,6 +32,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns-tz": "^3.2.0",
+    "jose": "^6.1.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-auth": "^5.0.0-beta.29",
