.env example 作成・更新

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,9 @@ DB_PORT=5432
 # TEST_DB_HOST=localhost
 # TEST_DB_PORT=5433
 # TEST_DB_NAME=test
+
+VITE_BFF_URL=http://localhost:3000
+VITE_DEEP_LINK_SCHEME=aitarotchat
+
+# equals to AUTH_SECRET in web/.env.local
+VITE_AUTH_SECRET=your-secret
