移植の修正更新

--- a/mobile/android/app/capacitor.build.gradle
+++ b/mobile/android/app/capacitor.build.gradle
@@ -12,7 +12,9 @@ dependencies {
     implementation project(':capacitor-community-admob')
     implementation project(':capacitor-community-generic-oauth2')
     implementation project(':capacitor-app')
+    implementation project(':capacitor-browser')
     implementation project(':capacitor-device')
+    implementation project(':capacitor-preferences')
 
 }
 
