--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,9 +14,11 @@
     "@capacitor-community/generic-oauth2": "^7.0.0",
     "@capacitor/android": "^7.4.3",
     "@capacitor/app": "^7.1.0",
+    "@capacitor/browser": "^7.0.2",
     "@capacitor/core": "^7.4.3",
     "@capacitor/device": "^7.0.2",
     "@capacitor/ios": "^7.4.3",
+    "@capacitor/preferences": "^7.0.2",
     "@tailwindcss/vite": "^4.1.14",
     "jose": "^6.1.0",
     "react": "^19.1.1",
