--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@capacitor-community/admob": "^7.0.3",
     "@capacitor/android": "^7.4.3",
     "@capacitor/app": "^7.1.0",
     "@capacitor/browser": "^7.0.2",
@@ -18,6 +17,7 @@
     "@capacitor/device": "^7.0.2",
     "@capacitor/filesystem": "^7.1.4",
     "@capacitor/ios": "^7.4.3",
+    "@capacitor/keyboard": "^7.0.3",
     "@capacitor/preferences": "^7.0.2",
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/query-sync-storage-persister": "^5.90.2",
