--- a/mobile/package.json
+++ b/mobile/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "ui:add": "npx shadcn@latest add "
   },
   "dependencies": {
     "@capacitor/android": "^7.4.3",
@@ -25,6 +26,7 @@
     "@tanstack/react-query-persist-client": "^5.90.2",
     "idb-keyval": "^6.2.2",
     "jose": "^6.1.0",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.14",
