React.StrictMode 対応

--- a/mobile/.env.example
+++ b/mobile/.env.example
@@ -20,3 +20,6 @@ VITE_API_BASE=https://api.example.com
 
 # equals to AUTH_SECRET in web/.env.local
 VITE_AUTH_SECRET=your-secret
+
+# Timezone setting
+VITE_LOCAL_TIMEZONE='Asia/Tokyo'
