--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,6 +24,7 @@
     "@tanstack/query-sync-storage-persister": "^5.90.2",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-query-persist-client": "^5.90.2",
+    "date-fns-tz": "^3.2.0",
     "idb-keyval": "^6.2.2",
     "jose": "^6.1.0",
     "lucide-react": "^0.544.0",
