--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -29,6 +29,6 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "types/**/*.d.ts"
-  ],
+, "lib/utils/date.ts"  ],
   "exclude": ["node_modules"]
 }
