翻訳の修正とログ機能追加

--- a/web/.env.example
+++ b/web/.env.example
@@ -18,3 +18,8 @@ DB_PORT=5432
 
 # Timezone setting
 LOCAL_TIMEZONE='Asia/Tokyo'
+
+# for Logging
+DISABLE_CONSOLE_LOG=false
+ENABLE_FILE_LOG=true
+ENABLE_DB_LOG=true
