--- a/web/package.json
+++ b/web/package.json
@@ -40,6 +40,8 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1",
+    "winston": "^3.18.3",
+    "winston-transport": "^4.9.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
