--- a/mobile/package.json
+++ b/mobile/package.json
@@ -31,6 +31,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.14",
+    "winston": "^3.18.3",
+    "winston-transport": "^4.9.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
