--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,10 +21,10 @@
     "noFallthroughCasesInSwitch": true,
     "typeRoots": ["./node_modules/@types", "./types"],
     "baseUrl": ".",
+    "ignoreDeprecations": "6.0",
     "paths": {
       "@/*": ["src/*"]
     }
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src", "next-env.d.ts", "**/*.ts", "**/*.tsx", "global.d.ts"]
 }
