--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "ui:add": "npx shadcn@latest add "
+    "ui:add": "npx shadcn@latest add ",
+    "reset": "ts-node scripts/reset-app.ts"
   },
   "dependencies": {
     "@capacitor/android": "^7.4.3",
@@ -20,6 +21,7 @@
     "@capacitor/ios": "^7.4.3",
     "@capacitor/keyboard": "^7.0.3",
     "@capacitor/preferences": "^7.0.2",
+    "@ionic/react": "^8.7.5",
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/query-sync-storage-persister": "^5.90.2",
     "@tanstack/react-query": "^5.90.2",
@@ -31,6 +33,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.14",
+    "ts-node": "^10.9.2",
     "winston": "^3.18.3",
     "winston-transport": "^4.9.0",
     "zustand": "^5.0.8"
