--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^2.0.23",
+    "@ai-sdk/google": "^2.0.17",
+    "@ai-sdk/groq": "^2.0.22",
+    "@ai-sdk/mistral": "^2.0.17",
+    "@ai-sdk/openai": "^2.0.44",
+    "@ai-sdk/xai": "^2.0.23",
     "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.17.0",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -28,6 +34,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.89.0",
     "@tanstack/react-query-devtools": "^5.89.0",
+    "ai": "^5.0.61",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
