サービス層とシード見直し

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,7 @@
     "reset": "ts-node scripts/reset-app.ts"
   },
   "dependencies": {
+    "@capacitor-community/sqlite": "^7.0.1",
     "@capacitor/android": "^7.4.3",
     "@capacitor/app": "^7.1.0",
     "@capacitor/browser": "^7.0.2",
