--- a/web/package.json
+++ b/web/package.json
@@ -17,13 +17,13 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^2.0.23",
-    "@ai-sdk/google": "^2.0.17",
-    "@ai-sdk/groq": "^2.0.22",
-    "@ai-sdk/mistral": "^2.0.17",
-    "@ai-sdk/openai": "^2.0.44",
-    "@ai-sdk/xai": "^2.0.23",
-    "@auth/prisma-adapter": "^2.10.0",
+    "@ai-sdk/anthropic": "2.0.27",
+    "@ai-sdk/google": "2.0.20",
+    "@ai-sdk/groq": "2.0.24",
+    "@ai-sdk/mistral": "2.0.19",
+    "@ai-sdk/openai": "2.0.49",
+    "@ai-sdk/xai": "2.0.26",
+    "@auth/prisma-adapter": "^2.11.0",
     "@prisma/client": "^6.17.1",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-popover": "^1.1.15",
@@ -32,9 +32,9 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@tanstack/react-query": "^5.89.0",
-    "@tanstack/react-query-devtools": "^5.89.0",
-    "ai": "^5.0.61",
+    "@tanstack/react-query": "^5.90",
+    "@tanstack/react-query-devtools": "^5",
+    "ai": "^5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
