--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,6 +24,7 @@
     "@capacitor/keyboard": "^7.0.3",
     "@capacitor/preferences": "^7.0.2",
     "@ionic/react": "^8.7.5",
+    "@revenuecat/purchases-capacitor": "^11.2.6",
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/query-sync-storage-persister": "^5.90.2",
     "@tanstack/react-query": "^5.90.2",
