--- a/mobile/package.json
+++ b/mobile/package.json
@@ -32,6 +32,8 @@
     "@tanstack/react-query-persist-client": "^5.90.2",
     "ai": "^5.0.61",
     "date-fns-tz": "^3.2.0",
+    "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.24",
     "idb-keyval": "^6.2.2",
     "jose": "^6.1.0",
     "lucide-react": "^0.544.0",
