ログアウト・プラン変更周りの見直し

--- a/mobile/.env.example
+++ b/mobile/.env.example
@@ -1,25 +1,23 @@
 # db
 DB_USER=aitarot
-DB_PASSWORD=password
+DB_PASSWORD=yourpassword
 DB_NAME=aitarot
 DB_HOST=localhost
 DB_PORT=5432
 
-# TEST_DB_USER=test
-# TEST_DB_PASSWORD=test
-# TEST_DB_NAME=test
-# TEST_DB_HOST=localhost
-# TEST_DB_PORT=5433
-# TEST_DB_NAME=test
-
-VITE_BFF_URL=http://localhost:3000
+VITE_BFF_URL=https://ai-tarot-chat.onrender.com
+# VITE_BFF_URL=http://localhost:3000
 VITE_DEEP_LINK_SCHEME=aitarotchat
-VITE_GOOGLE_CLIENT_ID=xxxxxxxx.apps.googleusercontent.com
-VITE_APPLE_SERVICE_ID=com.example.web   # AppleのService ID（Web用client_id）
-VITE_API_BASE=https://api.example.com
 
 # equals to AUTH_SECRET in web/.env.local
-VITE_AUTH_SECRET=your-secret
+VITE_AUTH_SECRET="yoursecretkeyhere"
 
 # Timezone setting
 VITE_LOCAL_TIMEZONE='Asia/Tokyo'
+
+# RevenueCat API Key
+VITE_REVENUECAT_IOS_KEY=appl_yourioskeyhere
+VITE_REVENUECAT_ANDROID_KEY=goog_yourandroidkeyhere
+
+# Debug menu
+VITE_ENABLE_DEBUG_MENU=true
