--- a/mobile/package.json
+++ b/mobile/package.json
@@ -30,6 +30,7 @@
     "@tanstack/query-sync-storage-persister": "^5.90.2",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-query-persist-client": "^5.90.2",
+    "@uiw/react-json-view": "^2.0.0-alpha.39",
     "ai": "^5.0.61",
     "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "^8.6.0",
