--- a/mobile/package.json
+++ b/mobile/package.json
@@ -40,6 +40,9 @@
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "tailwindcss": "^4.1.14",
     "ts-node": "^10.9.2",
     "winston": "^3.18.3",
