--- a/web/package.json
+++ b/web/package.json
@@ -19,10 +19,8 @@
   "dependencies": {
     "@ai-sdk/anthropic": "2.0.27",
     "@ai-sdk/google": "2.0.20",
-    "@ai-sdk/groq": "2.0.24",
-    "@ai-sdk/mistral": "2.0.19",
+    "@ai-sdk/google-vertex": "^3.0.49",
     "@ai-sdk/openai": "2.0.49",
-    "@ai-sdk/xai": "2.0.26",
     "@auth/prisma-adapter": "^2.11.0",
     "@prisma/client": "^6.17.1",
     "@radix-ui/react-dialog": "^1.1.15",
