--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "db:push": "npx prisma db push",
     "db:studio": "npx prisma studio",
     "db:seed": "tsx prisma/seed.ts",
+    "db:master": "tsx prisma/generate-master.ts",
     "ui:add": "npx shadcn@latest add ",
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
