--- a/web/package.json
+++ b/web/package.json
@@ -18,10 +18,10 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "2.0.27",
-    "@ai-sdk/google": "2.0.20",
-    "@ai-sdk/google-vertex": "^3.0.49",
-    "@ai-sdk/openai": "2.0.49",
+    "@ai-sdk/anthropic": "^2.0.35",
+    "@ai-sdk/google": "^2.0.23",
+    "@ai-sdk/google-vertex": "^3.0.51",
+    "@ai-sdk/openai": "^2.0.53",
     "@auth/prisma-adapter": "^2.11.0",
     "@prisma/client": "^6.17.1",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -33,7 +33,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.90",
     "@tanstack/react-query-devtools": "^5",
-    "ai": "^5.0",
+    "ai": "^5.0.76",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
