--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,10 @@
     "@ai-sdk/google-vertex": "^3.0.51",
     "@ai-sdk/openai": "^2.0.53",
     "@auth/prisma-adapter": "^2.11.0",
+    "@langchain/anthropic": "^1.0.0",
+    "@langchain/core": "^1.0.1",
+    "@langchain/google-vertexai": "^1.0.0",
+    "@langchain/openai": "^1.0.0",
     "@prisma/client": "^6.18.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-popover": "^1.1.15",
