--- a/web/package.json
+++ b/web/package.json
@@ -43,6 +43,7 @@
     "cmdk": "^1.1.1",
     "date-fns-tz": "^3.2.0",
     "jose": "^6.1.0",
+    "langchain": "^1.0.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-auth": "^5.0.0-beta.29",
