--- a/web/package.json
+++ b/web/package.json
@@ -38,6 +38,7 @@
     "@tanstack/react-query": "^5.90",
     "@tanstack/react-query-devtools": "^5",
     "ai": "^5.0.76",
+    "better-sse": "^0.15.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
