--- a/mobile/package.json
+++ b/mobile/package.json
@@ -50,6 +50,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.5",
     "@capacitor/cli": "^7.4.3",
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.0",
