UIとプロンプトの修正

--- a/web/.env.example
+++ b/web/.env.example
@@ -23,3 +23,6 @@ LOCAL_TIMEZONE='Asia/Tokyo'
 DISABLE_CONSOLE_LOG=false
 ENABLE_FILE_LOG=true
 ENABLE_DB_LOG=true
+
+# Auth.js settings
+AUTH_SECRET="your-auth-secret-here"
