環境変数サンプル修正

--- a/web/.env.local.example
+++ b/web/.env.local.example
@@ -1,9 +1,35 @@
-AUTH_SECRET="your-secret" # Added by `npx auth`. Read more: https://cli.authjs.dev
+AUTH_SECRET="your_auth_secret_here" # Added by `npx auth`. Read more: https://cli.authjs.dev
+NEXT_PUBLIC_AUTH_SECRET="your_auth_secret_here"
 
-AUTH_GOOGLE_ID=your-google-client-id-here
-AUTH_GOOGLE_SECRET=your-google-client-secret-here
-AUTH_APPLE_ID="com.myapp.webapp" # Added by `npx auth`. Read more: https://cli.authjs.dev
-AUTH_APPLE_SECRET=your-apple-secret-here # Added by `npx auth`. Read more: https://cli.authjs.dev
+AUTH_GOOGLE_ID=your_google_client_id_here
+AUTH_GOOGLE_SECRET=your_google_client_secret_here
+AUTH_APPLE_ID="com.your_domain.your_app"
+AUTH_APPLE_SECRET="your_apple_secret_here"
+AUTH_APPLE_TEAM_ID="your_apple_team_id_here"
+AUTH_APPLE_KEY_ID="your_apple_key_id_here"
+AUTH_APPLE_PRIVATE_KEY="your_apple_private_key_here"
 
-AUTH_URL=http://localhost:3000
+# BFF URL
+NEXT_PUBLIC_BFF_URL=https://your-bff-domain.com
+# NEXT_PUBLIC_BFF_URL=http://localhost:3000
+
+# AUTH_URL=http://localhost:3000
+AUTH_URL=https://your-auth-domain.com
 AUTH_TRUST_HOST=true
+
+# AI API keys
+GROQ_API_KEY=your_groq_api_key_here
+MISTRAL_API_KEY=your_mistral_api_key_here
+OPENAI_API_KEY=your_openai_api_key_here
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
+GOOGLE_API_KEY=your_google_api_key_here
+DEEPSEEK_API_KEY=your_deepseek_api_key_here
+
+# Vertex AI API keys
+GOOGLE_VERTEX_PROJECT=your_google_cloud_project_id_here
+GOOGLE_VERTEX_LOCATION=asia-northeast1
+GOOGLE_CLIENT_EMAIL=your_client_email@your_google_cloud_project_id_here.iam.gserviceaccount.com
+GOOGLE_PRIVATE_KEY="your_google_private_key_here"
+
+# for debug
+AI_DEBUG_MODE=true
