画面構成の見直しとVercelバグ対策

--- a/web/.env.local.example
+++ b/web/.env.local.example
@@ -18,12 +18,15 @@ AUTH_URL=https://your-auth-domain.com
 AUTH_TRUST_HOST=true
 
 # AI API keys
-GROQ_API_KEY=your_groq_api_key_here
-MISTRAL_API_KEY=your_mistral_api_key_here
 OPENAI_API_KEY=your_openai_api_key_here
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 GOOGLE_GENERATIVE_AI_API_KEY=your_google_api_key_here
 DEEPSEEK_API_KEY=your_deepseek_api_key_here
+# free tier keys
+GROQ_API_KEY=your_groq_api_key_here
+MISTRAL_API_KEY=your_mistral_api_key_here
+CEREBRAS_API_KEY=your_cerebras_api_key_here
+DEEPINFRA_API_KEY=your_deepinfra_api_key_here
 
 # Vertex AI API keys
 GOOGLE_VERTEX_PROJECT=your_google_cloud_project_id_here
