--- a/web/package.json
+++ b/web/package.json
@@ -19,8 +19,12 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^2.0.35",
+    "@ai-sdk/cerebras": "^1.0.25",
+    "@ai-sdk/deepinfra": "^1.0.23",
     "@ai-sdk/google": "^2.0.23",
     "@ai-sdk/google-vertex": "^3.0.51",
+    "@ai-sdk/groq": "^2.0.24",
+    "@ai-sdk/mistral": "^2.0.19",
     "@ai-sdk/openai": "^2.0.53",
     "@auth/prisma-adapter": "^2.11.0",
     "@prisma/client": "^6.18.0",
