--- a/web/.env.local.example
+++ b/web/.env.local.example
@@ -27,6 +27,9 @@ GROQ_API_KEY=your_groq_api_key_here
 MISTRAL_API_KEY=your_mistral_api_key_here
 CEREBRAS_API_KEY=your_cerebras_api_key_here
 DEEPINFRA_API_KEY=your_deepinfra_api_key_here
+# Home Server
+ARIADNE_API_KEY=your_ariadne_api_key_here
+
 
 # Vertex AI API keys
 GOOGLE_VERTEX_PROJECT=your_google_cloud_project_id_here
