--- a/web/package.json
+++ b/web/package.json
@@ -46,6 +46,7 @@
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-auth": "^5.0.0-beta.29",
+    "ollama-ai-provider-v2": "^1.5.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
