--- a/mobile/package.json
+++ b/mobile/package.json
@@ -34,6 +34,7 @@
     "@uiw/react-json-view": "^2.0.0-alpha.39",
     "ai": "^5.0.76",
     "date-fns-tz": "^3.2.0",
+    "embla-carousel-auto-height": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
     "idb-keyval": "^6.2.2",
